[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TeslaBeam.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/TeslaCartwheel.gd" type="Script" id=2]

[node name="TeslaCartwheel" type="Node2D"]
position = Vector2( 165, 159 )
script = ExtResource( 2 )

[node name="TeslaBeam" parent="." instance=ExtResource( 1 )]
rotation = 1.5708

[node name="TeslaBeam2" parent="." instance=ExtResource( 1 )]
rotation = 3.14159

[node name="TeslaBeam3" parent="." instance=ExtResource( 1 )]
rotation = 4.71239

[node name="TeslaBeam4" parent="." instance=ExtResource( 1 )]

[node name="VariationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RestoreAfterLightningTimer" type="Timer" parent="."]

[connection signal="timeout" from="VariationTimer" to="." method="_on_VariationTimer_timeout"]
[connection signal="timeout" from="RestoreAfterLightningTimer" to="." method="_on_RestoreAfterLightningTimer_timeout"]
